<resources>
    <string name="app_name">Food Recommend</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="user">User</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cong_thuc">ActivityCongThuc</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="nguyen_lieu">Nguyên Liệu :</string>
    <string name="cach_lam">Cách Làm :</string>
    <string name="GT_monan">Giới thiệu món ăn :</string>
    <string name="them_buoc">Thêm bước</string>
    <string name="them_nguyen_lieu">Thêm Nguyên Liệu</string>
    <string name="them_anh">Thêm Ảnh</string>
    <string name="huy">Hủy</string>
    <string name="goi_y">Gợi ý về món ăn :</string>
    <string name="thoi_tiet">Thời tiết:</string>
    <string name="hoantat">Hoàn tất</string>
    <string name="dem">Đêm</string>
    <string name="toi">Tối</string>
    <string name="chieu">Chiều</string>
    <string name="trua">Trưa</string>
    <string name="sang">Sáng</string>
    <string name="lanh">Lạnh</string>
    <string name="matme">Mát mẻ</string>
    <string name="mua">Mưa</string>
    <string name="nang">Nắng</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="x_a">Xóa</string>
    <string name="ten">Tên món ăn</string>
    <string name="hint_giaithichmonan">Đây là giới thiệu về món ăn</string>
    <string name="an_gi">Ăn gì bây giờ ?</string>
    <string name="mon_moi">Món ăn mới</string>
    <string name="nguoidangmon">Người đăng:</string>
    <string name="ngaydangmon">Ngày đăng món :</string>
    <string name="sua_mon">Sửa món</string>
    <string name="xoa_mon">Xóa món</string>
    <!--    <string name="default_web_client_id">Default</string>-->
</resources>