<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddFragment"
    android:id="@+id/scroll"
    android:background="#ECDEDA">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:background="#C3C3C3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imgv_monan"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <Button
                    android:text="@string/them_anh"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:id="@+id/txtNguyenlieu"
                        android:text="@string/nguyen_lieu"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <ListView
                        android:id="@+id/list_nguyenlieu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        android:text="@string/them_nguyen_lieu"
                        android:textColor="@color/black"
                        android:id="@+id/txtMoreNguyenlieu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:id="@+id/txtCachlam"
                        android:text="@string/cach_lam"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <ListView
                        android:id="@+id/list_cachlam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        android:text="@string/them_buoc"
                        android:textColor="@color/black"
                        android:id="@+id/txtMoreCachlam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:id="@+id/txtGTmonan"
                        android:text="@string/GT_monan"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <EditText
                        android:includeFontPadding="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_marginStart="10dp"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:text="@string/goi_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:text="Thời tiết:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/nang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/mua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/matme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/lanh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_marginStart="10dp"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:text="Thời gian:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:text="@string/sang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="-5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/trua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="-5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/chieu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="-5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/toi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="-5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/dem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
