<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CongThucActivity"
    android:orientation="vertical">
        <ImageView
            android:id="@+id/imgv_monan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:id="@+id/txtGTmonan"
                    android:text="@string/GT_monan"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:id="@+id/txtNguyenlieu"
                    android:text="@string/nguyen_lieu"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>
                <TextView
                    android:id="@+id/lvNguyenlieu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:id="@+id/txtCachlam"
                    android:text="@string/cach_lam"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lvCachlam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
</LinearLayout>

