<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.FixRecipeActivity"
    android:id="@+id/fix_scroll"
    android:background="@drawable/bradd">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:background="#C3C3C3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imgv_monan"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>
                <Button
                    android:id="@+id/btn_suaanh"
                    android:text="@string/sua_anh"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:text="@string/ten"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>
                <EditText
                    android:id="@+id/edt_fix_tenmonan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_edittext"
                    android:includeFontPadding="false"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"/>
                <LinearLayout
                    android:id="@+id/fix_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:text="@string/nguyen_lieu"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fix_nguyenlieu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/them_nguyen_lieu"
                            android:textColor="@color/black"
                            android:id="@+id/btn_fix_add_nguyenlieu"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fix_linearlayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/cach_lam"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fix_cachlam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_fix_add_cach_lam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/them_buoc"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:id="@+id/txtGTmonan"
                        android:text="@string/GT_monan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/edt_fix_gioithieu"
                        android:hint="Món ăn đến từ đâu, ..."
                        android:includeFontPadding="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_fix_hoantat"
                    android:text="@string/hoantat"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
